# cham-lang

./: .env.example  .gitignore  ANDROID_SIGNING.md  CLAUDE.md  GOOGLE_OAUTH_SETUP.md  README.md  cham-lang-app-schema.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
apps/native/: package.json  vite.config.ts
apps/native/src/: main.tsx
apps/native/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/src/: auth.rs  collection_commands.rs  commands.rs  csv_export.rs  csv_import.rs  lib.rs  models.rs  scheduled_task_handler.rs  sync.rs  sync_table_map.rs
apps/native/src-tauri/src/db/: collections.rs  mod.rs  practice.rs  settings.rs  vocabularies.rs
apps/native/src-tauri/src/http_api/: middleware.rs  mod.rs  response.rs
apps/native/src-tauri/src/http_api/routes/: collections.rs  learning.rs  metadata.rs  mod.rs  practice.rs  vocabularies.rs
apps/tauri/: tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx
apps/tauri/src-tauri/: Cargo.toml
apps/tauri/src-tauri/src/: collection_commands.rs  csv_import.rs  lib.rs  main.rs  models.rs  sync.rs
apps/tauri/src-tauri/src/db/: collections.rs  vocabularies.rs
apps/tauri/src-tauri/src/http_api/: middleware.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docs/: architecture.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
plans/reports/: docs-manager-260313-0121-cham-lang-documentation-phase-01.md
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_commands.rs  collection_commands.rs  commands.rs  csv_export.rs  csv_import.rs  database.rs  gdrive.rs  lib.rs  local_db.rs  mdns_sync_commands.rs  models.rs  notification_commands.rs  session.rs  web_server.rs
src-tauri/src/db/: collections.rs  helpers.rs  mod.rs  practice.rs  settings.rs  vocabularies.rs
src-tauri/src/http_api/routes/: collections.rs  metadata.rs  practice.rs  vocabularies.rs
src-tauri/src/mdns_sync/: client.rs  discovery.rs  history.rs  mod.rs  pairing.rs  protocol.rs  server.rs  transfer.rs
src/adapters/: ServiceFactory.ts  index.ts
src/adapters/interfaces/: ICollectionService.ts  ILearningSettingsService.ts  IPracticeService.ts  IVocabularyService.ts  index.ts
src/adapters/tauri/: TauriCSVAdapter.ts  TauriCollectionAdapter.ts  TauriGDriveAdapter.ts  TauriLearningSettingsAdapter.ts  TauriNotificationAdapter.ts  TauriPracticeAdapter.ts  TauriVocabularyAdapter.ts  index.ts
src/adapters/web/: DatabaseMigration.ts  HttpAdapter.ts  HttpCSVAdapter.ts  HttpCollectionAdapter.ts  HttpGDriveAdapter.ts  HttpLearningSettingsAdapter.ts  HttpNotificationAdapter.ts  HttpPracticeAdapter.ts  HttpVocabularyAdapter.ts  WebCSVAdapter.ts  WebCollectionAdapter.ts  WebGDriveAdapter.ts  WebLearningSettingsAdapter.ts  WebNotificationAdapter.ts  WebPracticeAdapter.ts  WebVocabularyAdapter.ts  db.ts  index.ts
src/components/atoms/: Accordion.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  FlashCard.tsx  Input.tsx  SearchableMultiSelect.tsx  Select.tsx  StatusBadge.tsx  TextArea.tsx  index.ts
src/components/molecules/: BottomNavigation.tsx  BulkActionToolbar.tsx  CollectionCard.tsx  CollectionModal.tsx  FillWordCard.tsx  HeroCard.tsx  MultipleChoiceCard.tsx  ProtectedRoute.tsx  QuickActionsCard.tsx  SearchBar.tsx  SearchFiltersCard.tsx  ShareModal.tsx  StatsCard.tsx  TopBar.tsx  VocabularyCard.tsx  index.ts
src/components/organisms/: BrowserSyncInitializer.tsx  CollectionForm.tsx  CollectionList.tsx  CollectionSelectorDialog.tsx  VocabularyForm.tsx  VocabularyList.tsx  index.ts
src/components/pages/: AddVocabularyPage.tsx  CSVExportPage.tsx  CSVImportPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  CreateCollectionPage.tsx  EditCollectionPage.tsx  EditVocabularyPage.tsx  ExplorePage.tsx  FillWordPracticePage.tsx  FlashcardPracticePage.tsx  HomePage.tsx  LearningSettingsPage.tsx  LocalSyncPage.tsx  LoginPage.tsx  MultipleChoicePracticePage.tsx  OAuthCallbackPage.tsx  PracticeModePage.tsx  ProfilePage.tsx  ProgressPage.tsx  RegisterPage.tsx  StudyModePage.tsx  VocabularyDetailPage.tsx  index.ts
src/components/templates/: MainLayout.tsx
src/contexts/: AuthContext.tsx  DialogContext.tsx  SyncNotificationContext.tsx  index.ts
src/hooks/: useServerConnection.ts  useTestSession.ts  useVocabulary.ts
src/i18n/: config.ts
src/i18n/locales/en/: translation.json
src/i18n/locales/vi/: translation.json
src/services/: BrowserSyncService.ts  auth.service.ts  collection.service.ts  csv.service.ts  fontSize.service.ts  index.ts  learningSettings.service.ts  mdns.service.ts  notification.service.ts  practice.service.ts  vocabulary.service.ts  wordSelection.service.ts
src/types/: auth.ts  collection.ts  csv.ts  practice.ts  settings.ts  vocabulary.ts
src/utils/: platform.ts  sessionManager.test.ts  sessionManager.ts
src/utils/spacedRepetition/: algorithmFactory.ts  index.ts  leitnerBoxes.ts  types.ts
src/utils/spacedRepetition/algorithms/: modifiedSm2.ts  simple.ts  sm2.ts
