[package]
name = "cham-lang"
version = "0.0.15"
description = "Cham Lang App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cham_lang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-google-auth = "0.3"
tauri-plugin-notification = "2"
tauri-plugin-schedule-task = { git = "https://github.com/loidinhm31/tauri-plugin-schedule-task", branch = "main" }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local database
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4.28"
env_logger = "0.11.8"
android_logger = "0.15.1"
# Google Drive API
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
# CSV Import/Export
csv = "1.3"

# mDNS discovery
mdns-sd = "0.11"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Utilities
bytes = "1.5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hostname = "0.4"
mac_address = "1.1"
hex = "0.4"
rand = "0.8"

