[package]
name = "cham-lang"
version = "0.2.0"
description = "Cham Lang App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cham_lang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-google-auth = "0.3"
tauri-plugin-notification = "2"
tauri-plugin-schedule-task = { git = "https://github.com/loidinhm31/tauri-plugin-schedule-task", branch = "main" }
tauri-plugin-dialog = "2.5.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local database
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4.28"
env_logger = "0.11.8"
android_logger = "0.15.1"
# Google Drive API
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
# CSV Import/Export
csv = "1.3"

# Desktop-only: Embedded web server for "Open in Browser" feature
# These dependencies are excluded from Android builds to reduce binary size
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-single-instance = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "set-header", "cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rust-embed = "8"
mime_guess = "2"
# Session token generation
rand = "0.9"
hex = "0.4"
