[package]
name = "cham-lang"
version = "0.4.1"
description = "Cham Lang App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cham_lang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-google-auth = "0.3"
tauri-plugin-notification = "2"
tauri-plugin-schedule-task = { git = "https://github.com/loidinhm31/tauri-plugin-schedule-task", branch = "main" }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
android_logger = "0.15.1"
dotenvy = "0.15"

# Desktop-only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-single-instance = "2"

[workspace]
